--- a/index.html
+++ b/index.html
@@ -83,10 +83,10 @@
       <div class="row">
         <input id="ttsUser" type="text" placeholder="Pseudo à lire (ex: okplonk)" />
         <select id="voiceSelect">
-          <option value="plonk">🟡 Plonk</option>
-          <option value="shandy">🪄 Shandy</option>
-          <option value="dj_pilouk">🎧 DJ Pilouk</option>
-          <option value="gobgob">💚 Gobgob</option>
+          <option value="zeyhouiuz">Voix 1</option>
+          <option value="shandycinq">Voix 2</option>
+          <option value="nikosmegamix">Voix 3</option>
+          <option value="tetoia">Voix 4</option>
         </select>
       </div>
       <div class="muted">Seuls les messages du viewer ci-dessus seront lus par TTS Monster avec la voix choisie.</div>
